--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -3,6 +3,7 @@ root pseudo-class is like HTML element but with higher specificity
 we put our css custom properties (variables) in here so they're accessible
 everywhere in the document.
 */
+
 :root {
   --color-primary: #EB2F64;
   --color-primary-light: #FF3366;
@@ -11,22 +12,27 @@ everywhere in the document.
   --color-grey-light-2: #f4f2f2;
   --color-grey-light-3: #f0eeee;
   --color-grey-light-4: #ccc;
+
   --color-grey-dark-1: #333;
   --color-grey-dark-2: #777;
-  --color-grey-dark-3: #999; }
+  --color-grey-dark-3: #999;
+}
 
 * {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+}
 
 *,
 *::before,
 *::after {
-  box-sizing: inherit; }
+  box-sizing: inherit;
+}
 
 html {
   box-sizing: border-box;
-  font-size: 62.5%; }
+  font-size: 62.5%;
+}
 
 body {
   font-family: 'Open Sans', sans-serif;
@@ -36,4 +42,5 @@ body {
   background-image: linear-gradient(to right bottom, var(--color-primary-light), var(--color-primary-dark));
   background-size: cover;
   background-repeat: no-repeat;
-  min-height: 100vh; }
+  min-height: 100vh;
+}
