--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -1,7 +1,7 @@
 // LOGO
 .logo {
   height: 3.25rem;
-  margin-left: 3rem;
+  margin-left: 2rem;
 }
 
 // SEARCH
@@ -62,30 +62,54 @@
 
 // USER NAVIGATION
 .user-nav {
-  background-color: greenyellow;
-  &__icon-box {
+  display: flex;
+  /* vertically center all items (two icon-box and one user containers) */
+  align-items: center;
+  align-self: stretch;
 
+  & > * {
+    padding: 0 2rem;
+    cursor: pointer;
+    height: 100%;
+    display: flex;
+    /* vertical center all items (each icon-box and the user will be a flex container with its contents vertically aligned */
+    align-items: center;
+  }
+
+  & > *:hover {
+    background-color: var(--color-grey-light-2);
+  }
+
+  &__icon-box {
+    position: relative;
   }
   
   &__icon {
     height: 2.25rem;
     width: 2.25rem;
+    fill: var(--color-grey-dark-2);
   }
 
   &__notification {
+    font-size: .8rem;
+    height: 1.75rem;
+    width: 1.75rem;
+    border-radius: 50%;
+    background-color: var(--color-primary);
+    color: #fff;
+    position: absolute;
+    top: 1.5rem;
+    right: 1.1rem;
 
-  }
-
-  &__user {
-
+    /* flexbox can also be used to center text within a single item */
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   &__user-photo {
     height: 3.75rem;
     border-radius: 50%;
-  }
-
-  &__user-name {
-
+    margin-right: 1rem;
   }
 }
