--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -116,17 +116,66 @@
 
 // SIDE NAVIGATION
 .side-nav {
+  font-size: 1.4rem;
+  list-style: none;
+  margin-top: 3.5rem;
+  
   &__item {
+    position: relative;
 
+    &:not(:last-child) {
+      margin-bottom: .5rem;
+    }
+
+    &--active {
+      background-color: var(--color-primary);
+    }
   }
 
-  &__link {
-    
+  &__item::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 3px;
+    background-color: var(--color-primary);
+    transform: scaleY(0);
+    transition: transform .2s,
+      width .4s cubic-bezier(1,0,0,1) .2s,
+      background-color .1s;
+  }
+
+  /* when an item is hovered, apply this to item's before */
+  &__item:hover::before,
+  &__item--active::before {
+    transform: scaleY(1);
+    width: 100%;
+  }
+
+  &__item:active::before {
+    background-color: var(--color-primary-light);
+  }
+
+  &__link:link,
+  &__link:visited {
+    text-decoration: none;
+    text-transform: uppercase;
+    color: var(--color-grey-light-1);
+    display: block;
+    padding: 1.5rem 3rem;
+    position: relative;
+    z-index: 10;
+    display: flex;
+    align-items: center;
   }
 
   &__icon {
     width: 1.75rem;
     height: 1.75rem;
+    margin-right: 2rem;
+    /* currentColor is color of this element or its parent */
+    fill: currentColor;
   }
 }
 
