--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -186,3 +186,54 @@
   text-align: center;
   padding: 2.5rem;
 }
+
+// GALLERY
+.gallery {
+  display: flex;
+
+  &__photo {
+    width: 100%;
+    /* display as block to avoid having small space underneath,
+    which would happen if we left it as inline default */
+    display: block;
+  }
+}
+
+// HOTEL OVERVIEW
+.overview {
+  display: flex;
+
+  &__heading {
+
+  }
+  
+  &__stars {
+    /* push the last two items in the row to the end,
+    while first two remain at the start. could also have
+    used margin-left: auto on 3rd item */
+    margin-right: auto;
+  }
+
+  &__icon-star,
+  &__icon-location {
+    width: 1.75rem;
+    height: 1.75rem;
+    fill: var(--color-primary);
+  }
+
+  &__location {
+
+  }
+
+  &__rating {
+
+  }
+
+  &__rating-average {
+
+  }
+
+  &__rating-count {
+
+  }
+}
