--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -202,9 +202,15 @@
 // HOTEL OVERVIEW
 .overview {
   display: flex;
+  align-items: center;
+  border-bottom: 1px solid var(--color-grey-light-2);
 
   &__heading {
-
+    font-size: 2.25rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    padding: 1.5rem 3rem;
   }
   
   &__stars {
@@ -212,6 +218,8 @@
     while first two remain at the start. could also have
     used margin-left: auto on 3rd item */
     margin-right: auto;
+    /* gets rid of space below star icons caused by the svgs being inline */
+    display: flex;
   }
 
   &__icon-star,
@@ -222,18 +230,76 @@
   }
 
   &__location {
+    font-size: 1.2rem;
+    display: flex;
+    align-items: center;
+  }
 
+  &__icon-location {
+    margin-right: .5rem;
   }
 
   &__rating {
-
+    background-color: var(--color-primary);
+    color: #fff;
+    margin-left: 3rem;
+    padding: 0 2.25rem;
+    align-self: stretch;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 
   &__rating-average {
-
+    font-size: 2.25rem;
+    font-weight: 300;
+    margin-bottom: -3px;
   }
 
   &__rating-count {
+    font-size: .8rem;
+    text-transform: uppercase;
+  }
+}
 
+// BUTTON INLINE
+.btn-inline {
+  border: none;
+  color: var(--color-primary);
+  font-size: inherit;
+  border-bottom: 1px solid currentColor;
+  padding-bottom: 2px;
+  display: inline-block;
+  background-color: transparent;
+  cursor: pointer;
+  transition: all .2s;
+
+  &:hover {
+    /* border color above auto updates to grey bc currentColor is used */
+    color: var(--color-grey-dark-1);
+  }
+
+  /* applies when button is pressed or when it's been clicked and nothing else clicked yet */
+  &:focus {
+    outline: none;
+    animation: pulsate 1s infinite;
+  }
+}
+
+@keyframes pulsate {
+  0% {
+    transform: scale(1);
+    box-shadow: none;
+  }
+
+  50% {
+    transform: scale(1.05);
+    box-shadow: 0 1rem 4rem rgba(0,0,0,.25);
+  }
+
+  100% {
+    transform: scale(1);
+    box-shadow: none;
   }
 }
